# nes

./: README.md
animatedsprite/: CMakeLists.txt  Makefile  memory_map.cfg
animatedsprite/assets/: CMakeLists.txt  assets.asm  assets.inc  first_level.nam  game.chr
animatedsprite/cmake/: CMake6502Compiler.cmake.in  CMake6502Information.cmake  CMakeDetermine6502Compiler.cmake  CMakeTest6502Compiler.cmake
animatedsprite/src/: CMakeLists.txt  main.asm
animatedsprite/src/common/: CMakeLists.txt  constants.inc  header.inc  reset.inc  utils.inc  vectors.asm
animatedsprite/src/ppu/: ppu.asm
atlantico/: actor.inc  atlantico2.chr  constants.inc  header.inc  main.asm  main.nes  memory_map.cfg  reset.inc  rle.py  state.inc  titlescreen.chr  titlescreen.nam  titlescreen.rle  utils.inc
clearmem/: clearmem.fdb  clearmem.nes  clearmem.s
exercises/001-warm_up/: Makefile  ca65.sh  exercise_001.nes  exercise_001.s  exercise_002.nes  exercise_002.s  exercise_003.nes  exercise_003.s  exercise_004.nes  exercise_004.s  exercise_005.nes  exercise_005.s  exercise_006.nes  exercise_006.s  exercise_007.nes  exercise_007.s  exercise_008.nes  exercise_008.s  exercise_009.nes  exercise_009.s
helloppu/: Makefile  constants.inc  header.inc  helloppu.fdb  helloppu.nes  helloppu.s
loadbackground/: Makefile  main.nes  main.s  memory_map.cfg  reset.inc
loadtext/: main.nes  main.s
loadtextandsprites/: header.inc  main.asm  main.nes  main.s
movingtank/: Makefile  constants.inc  main.asm  main.nes
scrollbg/: main.asm  main.nes  utils.inc
